import { Mesh } from "@babylonjs/core";

export interface IModel {
    toggleMusicPlayback(): void;
    spherePlayer: Mesh;
}
